--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "countries",
   "version": "0.1.0",
-  "homepage": "https://maryampayenda.github.io/countryAPI",
+  "homepage": "https://country-api-tau.vercel.app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
